[gd_scene load_steps=4 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Dongle/Dongle-48.tres" type="DynamicFont" id=2]
[ext_resource path="res://apps/multimedia/MusicPlayer.gd" type="Script" id=3]

[node name="MusicPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.045
anchor_top = 0.833333
anchor_right = 0.151875
anchor_bottom = 0.911111
margin_right = -131.0
margin_bottom = -56.0
custom_fonts/font = ExtResource( 2 )
text = "Now playing"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
mix_target = 1
bus = "MusicPlayer"

[node name="Controls" type="HBoxContainer" parent="."]
margin_left = 1310.0
margin_top = 750.0
margin_right = 1486.0
margin_bottom = 806.0
theme = ExtResource( 1 )
alignment = 1

[node name="Previous" type="Button" parent="Controls"]
margin_left = 9.0
margin_right = 59.0
margin_bottom = 56.0
rect_min_size = Vector2( 50, 0 )
text = "<<"

[node name="Play" type="Button" parent="Controls"]
margin_left = 63.0
margin_right = 113.0
margin_bottom = 56.0
rect_min_size = Vector2( 50, 0 )
toggle_mode = true
text = ">"

[node name="Next" type="Button" parent="Controls"]
margin_left = 117.0
margin_right = 167.0
margin_bottom = 56.0
rect_min_size = Vector2( 50, 0 )
text = ">>"

[node name="Shuffle" type="Button" parent="Controls"]
visible = false
margin_left = 162.0
margin_right = 212.0
margin_bottom = 56.0
rect_min_size = Vector2( 50, 0 )

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="pressed" from="Controls/Previous" to="." method="_on_Previous_pressed"]
[connection signal="toggled" from="Controls/Play" to="." method="_on_Play_toggled"]
[connection signal="pressed" from="Controls/Next" to="." method="_on_Next_pressed"]
